# 152-c-mamba-channel-correlation

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  cmamba_model.py  data_loader.py  features.py  requirements.txt  train.py
rust/: Cargo.toml
rust/examples/: backtest.rs  fetch_data.rs  train_model.rs
rust/src/: lib.rs  main.rs
rust/src/backtest/: engine.rs  mod.rs
rust/src/model/: cmamba.rs  gdd_mlp.rs  mamba.rs  mod.rs
rust/src/trading/: mod.rs  signals.rs
